fix user card alignment problem.

--- a/app/assets/stylesheets/modules/browse/_browse_layouts.scss
+++ b/app/assets/stylesheets/modules/browse/_browse_layouts.scss
@@ -54,6 +54,7 @@
 ==============================================*/
 
   .userCard{
+    vertical-align: top;
     position: relative;
     height: 15rem;
     width: 8rem;
